# Ankur

./: .gitignore  Last version that worked before cloudflare  README.md  apra_manual_parser.py  apra_search.py  pyproject.toml
examples/: examplesearch_returnedhtml.html
