[project]
name = "apra-search"
version = "0.1.0"
description = "Search the APRA AMCOS Song Catalogue for copyright information"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["apra", "amcos", "music", "copyright", "search", "catalogue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "playwright>=1.53.0",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/apra-search"
Repository = "https://github.com/yourusername/apra-search"
Issues = "https://github.com/yourusername/apra-search/issues"

[project.scripts]
apra-search = "apra_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
